@@ -28,7 +28,8 @@ namespace Rcpp{
 template <int RTYPE, bool na, typename VECTOR>
 class VectorBase : public traits::expands_to_logical__impl<RTYPE> {
 public:
-	struct r_type : traits::integral_constant<int,RTYPE>{} ;
+	struct rcpp_sugar_expression{} ;
+    struct r_type : traits::integral_constant<int,RTYPE>{} ;
 	struct can_have_na : traits::integral_constant<bool,na>{} ;
 	typedef typename traits::storage_type<RTYPE>::type stored_type ;
 	typedef typename traits::storage_type<RTYPE>::type elem_type ;
